--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
